<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_home_movies"
            android:icon="@drawable/ic_home_grey_900_48dp"
            android:title="@string/menu_home"
            android:contentDescription="@string/menu_home"
            android:checked="true"
            />
        <item
            android:id="@+id/nav_item_khmer_movies"
            android:icon="@drawable/ic_movie_grey_900_48dp"
            android:title="@string/menu_khmer_movies"
            android:contentDescription="@string/menu_khmer_movies"/>
        <item
            android:id="@+id/nav_item_thai_movies"
            android:icon="@drawable/ic_slideshow_grey_900_48dp"
            android:title="@string/menu_thai_movies"
            android:contentDescription="@string/menu_thai_movies"/>
        <item
            android:id="@+id/nav_item_chinese_movies"
            android:icon="@drawable/ic_local_movies_grey_900_48dp"
            android:title="@string/menu_chinese_movies"
            android:contentDescription="@string/menu_chinese_movies"/>
        <item
            android:id="@+id/nav_item_hong_kong_movies"
            android:icon="@drawable/ic_ondemand_video_grey_900_48dp"
            android:title="@string/menu_hong_kong_movies"
            android:contentDescription="@string/menu_hong_kong_movies"/>
        <item
            android:id="@+id/nav_item_other_movies"
            android:icon="@drawable/ic_movie_filter_grey_900_48dp"
            android:title="@string/menu_other_movies"
            android:contentDescription="@string/menu_other_movies"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_about_us" />
        </menu>
    </item>

</menu>
